add support for multiple authentication methods
